added section on the difficulty of linear codes, leads into the McEliece system.

--- a/Project.tex
+++ b/Project.tex
@@ -36,7 +36,7 @@ lyonssp@clarkson.edu\\}
 \thispagestyle{empty}
 
 \begin{abstract}
-As the world draws closer to the era of quantum computing, there is a fear on the minds of cryptographers and those who depend on the cryptographic technologies in place in everyday life.   Shor's algorithm, once it is useful in practice, has the ability to break systems, like RSA and ElGamal, that protect the world's most sensitive data.  This paper presents a system developed by Robert McEliece.  This code-based, public key cryptosystem, known as the McEliece cryptosystem, is one of few existing classic cryptosystems that cannot be broken by Shor's algorithm or other extensions of the Hidden Subgroup Problem.  In our paper we will present some necessary exposition on linear codes, explanation of the hardness of decoding a linear code, and the details of the cryptosystem itself.   
+As the world draws closer to the era of quantum computing, there is a fear on the minds of cryptographers and those who depend on the cryptographic technologies used in everyday life. Shor's algorithm, once it is useful in practice, has the ability to break systems like RSA and ElGamal, that protect the world's most sensitive data. This paper presents a system developed by Robert McEliece.  This code-based, public key cryptosystem, known as the McEliece cryptosystem, is one of few existing classic cryptosystems that cannot be broken by Shor's algorithm or other extensions of the Hidden Subgroup Problem.  In our paper we will present some necessary exposition on linear codes, explanation of the hardness of decoding a linear code, and the details of the cryptosystem itself.   
 \end{abstract}
 
 \section{Error-correcting Codes}
@@ -50,9 +50,11 @@ Now let's turn to the issue of \textbf{correcting} the error.  If a single bit i
 \begin{definition}
 A linear code of length n and rank k is a linear subspace C with $dim(C)=k$ of $\mathbb{F}_{q}^{n}$, where $\mathbb{F}_{q}$ is the finite field on q elements. 
 \end{definition}	
-
 \begin{definition}
-The distance between two codewords is the number of elements in which they differ.  The distance of a linear code is the minimum distance between two distinct codewords in the code.
+A generator matrix $G$ of a [$n,k,d$] linear code is a $k \times n$ matrix with row space equivalent to $C$.
+\end{definition}
+\begin{definition}
+The distance between two codewords is the number of elements in which they differ.  The distance of a linear code is the minimum distance between two distinct codewords in the code, or equivalently, the minimum weight of any nonzero codewords.
 \end{definition}
 
 \paragraph{}
@@ -66,5 +68,18 @@ With respect to error-correcting, the amount of errors a code can correct is als
 
 \paragraph{}
 Throughout the rest of the paper we will refer to a linear code of length $n$, dimension $k$, and distance $d$ as an [n,k,d] code.  
-\end{document}
 
+\section{Linear codes and cryptosystems}
+\paragraph{}
+In theory, most public-key cryptosystems are as hard to break as the one-way functions they are typically based on. For example, the security of RSA is based on the fact that factoring large composite numbers is (thought to be) exponentially harder than generating and multiplying large primes. Another commonly seen example of one such system is elliptic curve ElGamal, which is based on the discrete log problem over finite Abelian groups. However, researchers have discovered quantum algorithms that solve both of these problems, and more generally, the Hidden Subgroup Problem restricted to finitely generated Abelian groups in polylogarithmic time.
+
+\paragraph{}
+A natural question to ask is whether or not there are public-key cryptosystems that can be both implemented on classical computers but still be safe from quantum attacks. One such difficult problem associated with linear codes is the Nearest Codeword Problem (NCP). Given a generator matrix $G$ for a code $C$, and a (possibly noisy) observation of a codeword $y$, the nearest codeword problem is to find a vector $x$ so that $d(xG, y)$ is minimized (where $d$ represents the Hamming distance). It can be shown that this problem is NP-Hard through a series of reductions through Max-Cut, Not-All-Equal 3-SAT, and finally, 3-SAT.
+
+\paragraph{}
+This very naturally suggests a cryptosystem based on the NCP. With a linear code, one can simply encode a message and flip some correctable number of bits to encrypt the message. But then to recover the message, someone needs to solve the NCP. However, the hardness of NCP is reliant on the fact that the code could be any linear code. It's often the case that certain specializations of NP-Hard or NP-Complete problems can be solved quickly. For example, a special case of the Subset Sum problem is solved in polynomial time by cashiers everyday because the set of American coin values is superincreasing. Similarly, there exist linear codes where it is fast to solve the NCP. We discuss examples of such codes later in these notes. 
+
+\paragraph{}
+The only remaining obstacle to a public-key cryptosystem based on the hardness of the NCP is to hide or obscure the properties of your chosen code that make it efficient to decode from eavesdroppers. Since we're representing the linear code as a generator matrix, we can apply regular rules of linear algebra to ``hide'' the original generator matrix. Multiplying and adding rows and columns, as well as swapping rows in the generator matrix preserves the row space and thus the code specified by the generator matrix.
+
+\end{document}
